After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769939 - gl: hang on joining thread
gl: hang on joining thread
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-15 15:06 UTC by Vincent Penquerc'h
Modified: 2016-08-21 16:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix race using gl_thread (1.16 KB, patch)
2016-08-15 15:55 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2016-08-15 15:06:52 UTC
When running tests/check/generic/states.forever with latest git.

Running suite(s): states_bad
libDeckLinkAPI.so: cannot open shared object file: No such file or directory
libDeckLinkAPI.so: cannot open shared object file: No such file or directory
66%: Checks: 3, Failures: 0, Errors: 1
generic/states.c:189:E:general:test_state_changes_down_seq:0: (after this point) Test timeout expired

This is fairly rare. A GST_DEBUG=5 log shows:

0:00:22.738031796  7657      0x1980c00 INFO               glcontext gstglcontext.c:644:gst_gl_context_finalize:<glcontextglx2> joining gl thread
0:00:36.571151253  7607      0x1980c00 INFO                GST_INIT gst.c:989:gst_deinit: deinitializing GStreamer
Comment 1 Vincent Penquerc'h 2016-08-15 15:55:58 UTC
Created attachment 333370 [details] [review]
fix race using gl_thread

This fixes one race, but the test still occasionally hangs (the logs don't show a hang after join anymore though).
Comment 2 Matthew Waters (ystreet00) 2016-08-16 05:28:23 UTC
Comment on attachment 333370 [details] [review]
fix race using gl_thread

commit 2776cef25d2a98668b73272aecfe77e684e6627e
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Mon Aug 15 16:14:25 2016 +0100

    glcontext: fix race joining thread on finalize
    
    https://bugzilla.gnome.org/show_bug.cgi?id=769939
Comment 3 Tim-Philipp Müller 2016-08-21 16:13:33 UTC
> This fixes one race, but the test still occasionally hangs
> (the logs don't show a hang after join anymore though).

Just ran -bad generic/states.forever for 45 minutes, and didn't get any hang.

Let's close this bug and open a new bug about the new hang, ideally with more information such as backtrace/debug log etc.