glcontext: fix race joining thread on finalize

https://bugzilla.gnome.org/show_bug.cgi?id=769939